--- a/frontend/partials/header.html
+++ b/frontend/partials/header.html
@@ -18,6 +18,11 @@
       >
     </li>
     <li><a href="voice.html" class="navbar-link" data-nav-id="voice" data-i18n="navVoice">Voice</a></li>
+    <li>
+      <a href="services.html" class="navbar-link" data-nav-id="services" data-i18n="navServices"
+        >Services</a
+      >
+    </li>
     <li><a href="blog.html" class="navbar-link" data-nav-id="blog" data-i18n="navBlog">Blog</a></li>
     <li><a href="about.html" class="navbar-link" data-nav-id="about" data-i18n="navAbout">About</a></li>
     <li><a href="contact.html" class="navbar-link" data-nav-id="contact" data-i18n="navContact">Contact</a></li>
